pedagogy: enhance display on mobile and fix some bugs with webkit

--- a/core/static/core/style.scss
+++ b/core/static/core/style.scss
@@ -1771,7 +1771,7 @@ $pedagogy-white-text: #f0f0f0;
 
   .uv-quick-info-container {
     display: grid;
-    grid-template-columns: 10% 10% 10% 10% auto;
+    grid-template-columns: 20% 20% 20% 20% auto;
     grid-template-rows: 100% 100%;
     grid-template-areas: "hours-cm hours-td hours-tp hours-te hours-the" "department credit-type semester . ." ;
   }
@@ -1815,7 +1815,7 @@ $pedagogy-white-text: #f0f0f0;
       grid-template-rows: 100%;
       grid-template-areas: "stars comment";
 
-      @media screen and (max-width: $medium-devices){
+      @media screen and (max-width: $large-devices){
         grid-template-columns: 100%;
         grid-template-rows: 100% 100%;
         grid-template-areas: "stars" "comment";
@@ -1841,7 +1841,7 @@ $pedagogy-white-text: #f0f0f0;
       color: $pedagogy-white-text;
       clip-path: polygon(0 0%, 0 100%, 30% 100%, 33% 0);
 
-      @media screen and (max-width: $medium-devices){
+      @media screen and (max-width: $large-devices){
         clip-path: none;
       }
     }
@@ -1866,10 +1866,22 @@ $pedagogy-white-text: #f0f0f0;
     grid-template-rows: 156px 1fr;
     grid-template-areas: "grade grade-stars uv-infos" ". . uv-infos";
 
-    @media screen and (max-width: $medium-devices){
-      grid-template-columns: 150px 100px;
+    @media screen and (max-width: $large-devices){
+      grid-template-columns: 50% 50%;
       grid-template-rows: 100% 100%;
       grid-template-areas: "grade grade-stars" "uv-infos uv-infos";
+
+      .pedagogy {
+        &.stars-grade {
+          display: none;
+        }
+        &.star-checked {
+          display: inline;
+        }
+        &.star-not-checked {
+          display: inline;
+        }
+      }
     }
   }
 
